# swarm_sync_sim

./: .gitignore  LICENSE  README.en.md  README.md  git仓库建立方法.md  install.sh
src/fw_plane_sim/: CMakeLists.txt  package.xml
src/fw_plane_sim/include/fw_plane_sim/: fw_plane_visualizer.hpp
src/fw_plane_sim/include/fw_plane_sim/fw_sim/: fw_driver_sim.hpp
src/fw_plane_sim/launch/: fw_plane_visualizer_single.launch  single.rviz
src/fw_plane_sim/model/: plane.urdf
src/fw_plane_sim/src/: fw_plane_visualizer.cpp  fw_plane_visualizer_node.cpp
src/fw_plane_sim/src/fw_sim/: fw_driver_sim.cpp  fw_sim_node.cpp
src/fw_plane_sim/src/on_fw_sim/: BHDynamics.cpp  tello_driver_sim.cpp
src/fw_plane_sim/src/on_fw_sim/BHDynamic/: BHDynamic.h
src/px4_rotor_sim/: CMakeLists(copy).txt  CMakeLists.txt  package.xml
src/px4_rotor_sim/include/mavros_px4_quadrotor_sim/: drone_visualizer.hpp  mavros_px4_quadrotor_sim_node.hpp  px4_sitl.hpp  quadrotor_dynamics.hpp
src/px4_rotor_sim/launch/: drone_visualizer_multi.launch  drone_visualizer_single.launch  fw_drone_visualizer_single.launch.launch  multi_px4_rotor.rviz  multi_px4_rotor_sim.launch  px4_param.yaml  px4_rotor_sim_param.yaml  px4_rotor_sim_single.launch  px4_rotor_single.launch  single_drone_visualizer.launch  single_node.launch  single_px4_rotor.rviz  single_px4_rotor_plotjuggler.xml  test_group.launch  test_multi_group.launch  test_multi_px4_rotor.rviz
src/px4_rotor_sim/model/: iris.urdf
src/px4_rotor_sim/model/meshes/: iris_prop_ccw.dae
src/px4_rotor_sim/model_plane/: plane.urdf
src/px4_rotor_sim/plugins/: nodelet_plugins.xml
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/: drone_visualizer.cpp  drone_visualizer_node.cpp  generate_template.py  mavros_px4_quadrotor_sim_node.cpp  px4_sitl.cpp  quadrotor_dynamics.cpp
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/mavros_sim/: MavrosSim.cpp  MavrosSim.hpp
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/mavros_sim/launch/: mavros_sim_test.launch
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/mavros_sim/lib/: uas_data.cpp
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/mavros_sim/plugins/: command.cpp  global_position.cpp  imu.cpp  local_position.cpp  setpoint_mixin.h  setpoint_raw.cpp  sys_status.cpp
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/px4_modules/commander/: Commander.cpp  Commander.hpp  state_machine_helper.cpp  state_machine_helper.h
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/px4_modules/mavlink/: mavlink_msg_list.cpp  mavlink_msg_list.hpp  mavlink_receiver.cpp  mavlink_receiver.h  mavlink_streamer.cpp  mavlink_streamer.hpp
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/px4_modules/mc_att_control/: mc_att_control.hpp  mc_att_control_main.cpp
src/px4_rotor_sim/src/mavros_px4_quadrotor_sim/px4_modules/mc_pos_control/: MulticopterPositionControl.cpp  MulticopterPositionControl.hpp
src/sss_sim_agent/: CMakeLists.txt  package.xml
src/sss_sim_agent/include/mavlink/: README.md
src/sss_sim_agent/include/mavros_px4_quadrotor_sim/: mavros_px4_quadrotor_sim_node.hpp  px4_sitl.hpp
src/sss_sim_agent/include/mavros_quadrotor_sim/: mavros_quadrotor_sim_node.hpp  px4_sitl.hpp  quadrotor_dynamics.hpp
src/sss_sim_agent/include/mavros_quadrotor_sim/mavros_sim/: mavros_sim.hpp
src/sss_sim_agent/include/mavros_quadrotor_sim/px4_lib/geo/: geo.h
src/sss_sim_agent/launch/: mavros_px4_quadrotor_sim.launch  mavros_px4_quadrotor_sim_single.launch  mavros_quadrotor_sim.launch  px4_param.yaml
src/sss_sim_agent/src/mavros_px4_quadrotor_sim/: mavros_px4_quadrotor_sim_node.cpp  px4_sitl.cpp  quadrotor_dynamics.cpp
src/sss_sim_agent/src/mavros_px4_quadrotor_sim/mavros_sim/: MavrosSim.cpp  MavrosSim.hpp
src/sss_sim_agent/src/mavros_px4_quadrotor_sim/mavros_sim/launch/: mavros_sim_test.launch
src/sss_sim_agent/src/mavros_px4_quadrotor_sim/mavros_sim/lib/: mavros_uas.h  uas_stringify.cpp
src/sss_sim_agent/src/mavros_px4_quadrotor_sim/mavros_sim/plugins/: command.cpp  imu.cpp  local_position.cpp
src/sss_sim_agent/src/mavros_px4_quadrotor_sim/px4_modules/commander/: Commander.cpp  Commander.hpp  state_machine_helper.cpp  state_machine_helper.h
src/sss_sim_agent/src/mavros_px4_quadrotor_sim/px4_modules/mavlink/: mavlink_msg_list.cpp  mavlink_msg_list.hpp  mavlink_receiver.cpp  mavlink_receiver.h  mavlink_streamer.cpp  mavlink_streamer.hpp
src/sss_sim_agent/src/mavros_px4_quadrotor_sim/px4_modules/mc_att_control/: mc_att_control_main.cpp
src/sss_sim_agent/src/mavros_quadrotor_sim/: mavros_quadrotor_sim_node.cpp  px4_sitl.cpp  quadrotor_dynamics.cpp
src/sss_sim_agent/src/mavros_quadrotor_sim/mavros_sim/: MavrosSim.cpp  MavrosSim.hpp  mavros_sim.cpp
src/sss_sim_agent/src/mavros_quadrotor_sim/mavros_sim/launch/: mavros_sim_test.launch
src/sss_sim_agent/src/mavros_quadrotor_sim/mavros_sim/lib/: mavros_uas.h  uas_data.cpp  uas_timesync.cpp
src/sss_sim_agent/src/mavros_quadrotor_sim/mavros_sim/plugins/: local_position.cpp  setpoint_mixin.h  setpoint_raw.cpp  sys_status.cpp
src/sss_sim_agent/src/mavros_quadrotor_sim/px4_controller/AttitudeControl/: AttitudeControl.cpp
src/sss_sim_agent/src/mavros_quadrotor_sim/px4_modules/mavlink/: mavlink_manager.hpp  mavlink_msg_list.cpp  mavlink_msg_list.hpp  mavlink_receiver.cpp  (+3 more)
src/sss_sim_env/: CMakeLists.txt  package.xml
src/sss_sim_env/include/: TimeClient.hpp  TimeServer.hpp  sim_clock.hpp
src/sss_sim_env/include/sss_sim_env/: ClockUpdater.hpp  Sleep.hpp  TimeServer.hpp  Timer.hpp  createTimer.hpp  sss_utils.hpp
src/sss_sim_env/launch/: sim_clock.launch
src/sss_sim_env/msg/: TimeRequest.msg
src/sss_sim_env/plugins/: nodelet_plugins.xml
src/sss_sim_env/scripts/: clock_ui.py
src/sss_sim_env/scripts/ui/: main_window.py  main_window.ui  py_cmd.sh
src/sss_sim_env/src/: TimeClient.cpp  TimeServer.cpp  sim_clock.cpp
src/sss_sim_env/src/ClockUpdater/: ClockUpdater.cpp
src/sss_sim_env/src/sim_clock/: TimeServer.cpp  sim_clock.cpp
src/sss_sim_env/src/sss_utils/: ClockUpdater.cpp  Sleep.cpp  Timer.cpp
src/sss_sim_env/srv/: ClientRegister.srv  ClientUnregister.srv  SimClockControl.srv
(+103 files in other folders)
